...
  @override
  _HomePageState createState() => _HomePageState();
}

class _HomePageState extends State<HomePage> {
  int _index = 0;
  final List<String> _tabTitle = ['Movies', 'Tv Shows'];
  final List<Widget> _page = [const HomeMoviePage(), const HomeTvShowPage()];
  void _onSelectedPage(int index) {
    setState(() {
      _index = index;
    });
  }
...
