...
                              style: kHeading5,
                            ),
                            Row(
                              mainAxisAlignment: MainAxisAlignment.spaceBetween,
                              children: [
                                ElevatedButton(
                                  key: const Key('watchlistButtonMovie'),
                                  onPressed: () {
                                    if (!isAddedWatchlist) {
                                      Provider.of<MovieDetailBloc>(context,
                                              listen: false,)
                                          .add(AddToWatchlist(movie));
                                    } else {
...
